service classes for ChatSession, KnowledgeBase, User and adding default password for admin in .properties file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+
+app.security.admin-default-password=${ADMIN_DEFAULT_PASSWORD:Admin@12345}
