--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,5 +6,11 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 
 app.security.admin-default-password=${ADMIN_DEFAULT_PASSWORD:Admin@12345}
+app.rateLimit.requestsPerMinute=30
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
