--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-
+app.jwt.secret=base64:7tkxw8JpqgSAN8InWkQzgWGpu8ijXXymtyqZSIN37AQ=
+app.jwt.expirationMs=86400000
+app.ai.enabled=false
+app.ai.provider=openai
+app.ai.model=gpt-3.5-turbo
+app.ai.apiKey=${OPENAI_API_KEY:}
 app.security.admin-default-password=${ADMIN_DEFAULT_PASSWORD:Admin@12345}
 app.rateLimit.requestsPerMinute=30
 springdoc.api-docs.enabled=true
