--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,14 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+  get: 4.6.4
+  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  google_fonts: 5.0.0
+  flutter_spinkit: ^5.2.0
+  intl: ^0.19.0
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
